--- a/05-Background-css/index3.html
+++ b/05-Background-css/index3.html
@@ -12,7 +12,7 @@
             <h1>Header title</h1>
         </div>
         <div class="text">
-           <div class="df"> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi et dicta assumenda consequuntur nulla omnis quas minus inventore quo, necessitatibus reiciendis velit similique esse excepturi? Quod dolorum nam laudantium ab?</p></div>
+           <div> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi et dicta assumenda consequuntur nulla omnis quas minus inventore quo, necessitatibus reiciendis velit similique esse excepturi? Quod dolorum nam laudantium ab?</p></div>
            <div> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi et dicta assumenda consequuntur nulla omnis quas minus inventore quo, necessitatibus reiciendis velit similique esse excepturi? Quod dolorum nam laudantium ab?</p></div>
         </div>
         <div class="gapp">
